--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <div class="all">
     <div class="header">
       <ul class="left-links">
         <li><a href="#">About</a></li>
@@ -19,7 +20,7 @@
       </ul>
     </div>
     <div class="content">
-      <img src="./logo.png" alt="">
+      <img class="img" src="./logo.png" alt="">
       <div class="input">
         <input type="text">
       </div>
@@ -37,6 +38,7 @@
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
       </ul>
+    </div>
     </div>
   </body>
 </html>
